Category icons not showing on dashboard fix

--- a/resources/less/admin-menu.less
+++ b/resources/less/admin-menu.less
@@ -6,7 +6,7 @@
     .wp-menu-image {
         &::before {
             display: inline-block;
-            font-family: "Font Awesome 5 Free";
+            font-family: "Font Awesome 5 Free", "FontAwesome";
             font-size: 18px;
             font-style: normal;
             font-variant: normal;
